# SecResearchProject

./: .gitignore  README.md
proposal/: Notes.md
src/: Readme.md  pyproject.toml
src/aggregator/: cve.py  cwe.py
src/notebooks/: gather_cwe_data.ipynb
